--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,4 +20,7 @@ body {
     }
     hr {
     border: 0.01px solid #00000025;
-}
+    }
+    video::-webkit-media-controls {
+        display: none;
+    }
